# Python-Notebooks

./: .gitignore  課綱.md
2026.06.05/: AI內容創作工作坊_教師版教材.md  為什麼要養成貼文的習慣.md  話題.md
Array/: README.md
CustomTkinter/: README.md  pyproject.toml
Gmail/: README.md  系統發送gmail.md
Groq/: .env  README.md  main.py  pyproject.toml
MediaPipe/: .env  README.md  main.py  pyproject.toml
MediaPipe/MediaPipe_src/: MediaPipe手指數字儀表板.py  MediaPipe手指關節截圖.py  subscribers.json  人臉偵測-線上狀態提醒-串接TG_Bot.py  人臉偵測-線上狀態提醒.py  伏地挺身影片計數.py  單雙手都可算1-10.py  嘴巴開合偵測.py  基於Mediapipe的Face_Mesh.py  基本人臉偵測.py  基本手指辨識.py  手指復健.py  教室出席統計.py  比手勢換圖片.py  深蹲影片計數.py  測試讀取Webcam.py  背景糊化.py  閉眼偵測.py  雙手辨識0-10.py  駝背提醒.py
OpenCV/: README.md  face_database.pkl  pyproject.toml
OpenCV/OpenCV_src/: BGR：OpenCV預設看到的顏色.py  Canny邊緣偵測.py  HSV：更適合用來找顏色.py  OpenCV+Gemini塔羅解牌.py  OpenCV+Gemini寵物溝通師.py  OpenCV+Gemini美食分析.py  OpenCV+Groq實作股票技術線分析.py  SFace做人臉相似度分析.py  SFace做人臉辨識系統.py  Webcam更換背景顏色.py  Webcam背景模糊.py  Webcam背景變黑.py  YuNet做Webcam即時人臉偵測.py  YuNet做Webcam即時人臉追蹤.py  YuNet做Webcam即時背景模糊.py  YuNet做Webcam即時臉部裁切.py  YuNet做Webcam即時自動拍照.py  人物照片邊緣化.py  人體剪影偵測.py  侵蝕.py  偵測出各式圖形.py  動態偵測.py  卡通風.py  平滑.py  底片風.py  形態學.py  影片與攝影機.py  找出圖片輪廓.py  找出矩形輪廓.py  把彩色圖片轉成灰階圖片.py  數有幾個圓.py  文件掃描.py  模糊風.py  浮雕風.py  灰階風.py  熱感應風.py  畫圓形+加文字.py  畫直線.py  畫矩形.py  素描風.py  (+8 more)
Python 程式設計：異常處理/: Zerojudge題目.txt
Python程式設計：內建模組/: README.md  random：隨機模組.ipynb  time：時間模組.ipynb  狂開視窗.py  終端機剪刀石頭布.py
Python程式設計：字典/: Zerojudge題目.txt
Python程式設計：模組/: Python程式設計：模組.ipynb
Python程式設計：輸入輸出/: Python程式設計：輸入輸出.ipynb  out.txt  練習：Zerojudge題目.txt
(+160 files in other folders)
