[project]
name = "mediapipe_tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "mediapipe==0.10.9",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
]
